<resources>
    <string name="app_name">Hcamera</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다</string>
    <string name="pet_feed">사료</string>
    <string name="pet_snack">간식</string>
    <string name="pet_bath_products">목욕 용품</string>
    <string name="etcetera">기타</string>
    <string name="dog_breeds">견종 : </string>
    <string name="pet_name_input">애완견의 이름을 입력해주세요</string>
    <string name="pet_old_input">애완견의 나이를 입력해주세요</string>
    <string name="using">using</string>
</resources>
