<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.widget.GridLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55.5dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="55.5dp"
        android:layout_marginBottom="160dp">

        <Button
            android:id="@+id/feed_button"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/pet_feed"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/snack_button"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/pet_snack"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/bath_product_button"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/pet_bath_products"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/etcetra_button"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/etcetera"
            app:layout_column="0"
            app:layout_row="1"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:id="@+id/etcetra_button2"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/etcetera"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/etcetra_button3"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/etcetera"
            app:layout_column="2"
            app:layout_row="1" />
    </android.widget.GridLayout>
</RelativeLayout>